feat: Mejora en la carpeta services
Se agregaron nuevas modificaciones a los codigos de firebaseservice.cs y en los controllers para que haga autotenticación dentro de la interfaz y tener los metodos para llamar una base de datos con fire base

--- a/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/AgenciaViajes.API.csproj
+++ b/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/AgenciaViajes.API.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="9.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="9.0.3" />
   </ItemGroup>
 
