feat(login): página de Login + rutas + AuthService + interceptor + guard (cierra #4)

--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ Thumbs.db
 # JSON de credenciales privadas (Firebase)
 serviceAccountKey.json
 
-# Configuración sensible
+# Configuraciï¿½n sensible
 appsettings.Development.json
 appsettings.Local.json
+node_modules
