feat: Cambios en el login
Se creo la carpeta para gestion html de wwwroot para el login con su diseño, fondo password, etc.

--- a/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/AgenciaViajes.API.csproj
+++ b/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/AgenciaViajes.API.csproj
@@ -17,4 +17,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\.editorconfig" />
+    <None Include="wwwroot\app.js" />
+    <None Include="wwwroot\index.html" />
+    <None Include="wwwroot\styles.css" />
+  </ItemGroup>
+
 </Project>
