--- a/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/AgenciaViajes.API.csproj
+++ b/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/AgenciaViajes.API.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="config\" />
+  </ItemGroup>
+
 </Project>
