--- a/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/Properties/launchSettings.json
+++ b/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/Properties/launchSettings.json
@@ -1,13 +1,42 @@
 {
+  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:34278",
+      "sslPort": 44360
+    }
+  },
   "profiles": {
-    "AgenciaViajes.API": {
+    "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5078;https://localhost:7078",
+      "launchUrl": "",
+      "applicationUrl": "http://localhost:5090;https://localhost:7053",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "",
+      "applicationUrl": "https://localhost:7053;http://localhost:5090",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
+  },
+  "IIS Express": {
+    "commandName": "IISExpress",
+    "launchBrowser": true,
+    "launchUrl": "swagger",
+    "environmentVariables": {
+      "ASPNETCORE_ENVIRONMENT": "Development"
+    }
   }
+}
 }
