--- a/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/AgenciaViajes.API.csproj
+++ b/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/AgenciaViajes.API.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="FirebaseAdmin" Version="3.3.0" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
     <PackageReference Include="Google.Cloud.Firestore" Version="3.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
